WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55197
REGRESSION (
r79629
): Non-expanding ruby base is start-aligned rather than centered
https://bugs.webkit.org/show_bug.cgi?id=55197
Summary
REGRESSION (r79629): Non-expanding ruby base is start-aligned rather than cen...
mitz
Reported
2011-02-24 16:57:39 PST
As reported by James Robinson in
bug 55183 comment #4
. See <
http://build.chromium.org/f/chromium/layout_test_results/Webkit_Mac10_5/results/layout-test-results/fast/ruby/ruby-beforeafter-actual.png
>.
Attachments
Adjust line boundaries even if there are no expansion opportunities
(1.95 KB, patch)
2011-02-24 17:12 PST
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-02-24 17:12:07 PST
Created
attachment 83752
[details]
Adjust line boundaries even if there are no expansion opportunities
mitz
Comment 2
2011-02-24 18:22:02 PST
Committed <
http://trac.webkit.org/projects/webkit/changeset/79656
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug