REGRESSION (r79629): Non-expanding ruby base is start-aligned rather than centered https://bugs.webkit.org/show_bug.cgi?id=55197

Reviewed by Simon Fraser.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::computeInlineDirectionPositionsForLine): Adjust the line boundaries even
if there are no expansion opportunities. This allows RenderRubyBase to center itself.



Canonical link: https://commits.webkit.org/69575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79656 268f45cc-cd09-0410-ab3c-d52691b4dbfc